--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,17 @@
 
 :root {
   font-family: "Inter", sans-serif;
-  background: #000000;
   scroll-behavior: smooth;
+  background: #000000;
 }
 
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 #home,
 #experience,
 #projects,
